@@ -2,84 +2,8 @@ import java.io.File
 
 plugins {
     // Apply the application plugin to add support for building a CLI application in Java.
-    application
+    id("buildlogic.java-application-conventions")
     id("org.graalvm.buildtools.native") version "0.10.2"
-    id("com.diffplug.spotless") version "7.0.0.BETA1"
-    `maven-publish`
-}
-
-repositories {
-    // Use Maven Central for resolving dependencies.
-    mavenCentral()
-    gradlePluginPortal()
-}
-
-val jdkVersion = "22"
-
-// JDK22: Foreign Function Interface (FFI)
-// Support building native Rust library using Cargo:
-// https://doc.rust-lang.org/cargo/getting-started/installation.html
-val osName = System.getProperty("os.name").lowercase()
-
-val cargoBuildDir = file("${layout.buildDirectory.get()}/cargo")
-
-val libPath = when {
-    osName.contains("win") -> "${cargoBuildDir}/debug"
-    osName.contains("mac") -> "${cargoBuildDir}/debug"
-    osName.contains("nux") -> "${cargoBuildDir}/debug"
-    else -> throw GradleException("Unsupported OS")
-}
-val libName = System.mapLibraryName("tictactoe")
-
-//
-// Rust Build Start
-//
-tasks.register<Exec>("formatRust") {
-    workingDir = file("src/main/rust")
-    commandLine = listOf("cargo", "fmt")
-}
-// alias for formatRust
-tasks.register<Exec>("cargoFmt") {
-    dependsOn("formatRust")
-}
-
-tasks.register<Exec>("buildRust") {
-    // https://doc.rust-lang.org/cargo/reference/environment-variables.html
-    environment("CARGO_TARGET_DIR", cargoBuildDir.absolutePath)
-    workingDir = file("src/main/rust")
-    commandLine = listOf("cargo", "build")
-}
-// alias for buildRust
-tasks.register<Exec>("cargoBuild") {
-    dependsOn("buildRust")
-}
-
-tasks.named("compileJava") {
-    dependsOn("buildRust")
-}
-// clean up the Rust build artifacts
-tasks.register<Delete>("cleanRust") {
-    delete(cargoBuildDir)
-}
-tasks.named("clean") {
-    dependsOn("cleanRust")
-}
-// Format Rust and java code together
-tasks.named("spotlessApply") {
-    dependsOn("formatRust")
-}
-tasks.named<Jar>("jar") {
-    from("${cargoBuildDir}/debug") {
-        include(libName) 
-    }
-}
-//
-// Rust Build End
-//
-
-// Automatic code formatting before compile
-tasks.named("compileJava") {
-    dependsOn("spotlessApply")
 }
 
 dependencies {
@@ -87,53 +11,19 @@ dependencies {
     // https://central.sonatype.com/artifact/org.bouncycastle/bcprov-jdk18on
     // -> JDK API -> Bouncycastle
     implementation("org.bouncycastle:bcprov-jdk18on:1.78.1")
+    implementation(project(":api"))
 
     // JDK9: Platform Logging (Third-Party)
     // -> JDK API -> SLF4J -> Logback
     runtimeOnly("ch.qos.logback:logback-classic:1.5.6")
     runtimeOnly("org.slf4j:slf4j-api:2.0.13")
     runtimeOnly("org.slf4j:slf4j-jdk-platform-logging:2.0.13")
-
-
-    // JDK23: JMH (Third-Party) Not required, added for benchmarking
-    // https://github.com/openjdk/jmh
-    implementation("org.openjdk.jmh:jmh-core:1.37")
-    annotationProcessor("org.openjdk.jmh:jmh-generator-annprocess:1.37")
-}
-
-// Run JMH benchmark
-// ./gradlew jmh
-tasks.register<JavaExec>("jmh") {
-    mainClass.set("org.openjdk.jmh.Main")
-    classpath = sourceSets["main"].runtimeClasspath
-    args = listOf("org.xxdc.oss.example.interop.benchmark.PlayerIdsBenchmark")
-}
-
-testing {
-    suites {
-        // Configure the built-in test suite
-        val test by getting(JvmTestSuite::class) {
-            // Use TestNG test framework
-            useTestNG("7.5.1")
-        }
-    }
 }
 
 // Apply a specific Java toolchain to ease working on different environments.
 java {
-    toolchain {
-        languageVersion = JavaLanguageVersion.of(jdkVersion)
-    }
     withJavadocJar()
     withSourcesJar()
-}
-
-// Code formatting (./gradlew spotlessApply)
-spotless {
-    java {
-        googleJavaFormat("1.23.0")
-            .reflowLongStrings()
-    }
 }
 
 // Allow GraalVM native AOT compilation
@@ -143,10 +33,8 @@ graalvmNative {
             javaLauncher = javaToolchains.launcherFor {
                 // NB: On MacOS ARM ARCH the native-image implementation is not available
                 // for the versions of GRAAL_VM Community edition - selecting Oracle
-                languageVersion = JavaLanguageVersion.of(jdkVersion)
+                languageVersion = java.toolchain.languageVersion
                 vendor = JvmVendorSpec.matching("Oracle")
-                // languageVersion = JavaLanguageVersion.of(17)
-                // vendor = JvmVendorSpec.GRAAL_VM
             }
         }
     }
@@ -186,12 +74,11 @@ publishing {
     publications {
         create<MavenPublication>("maven") {
             groupId = "org.xxdc.oss.example"
-            artifactId = "tictactoe"
-            version = "1.0.0-jdk$jdkVersion"
+            artifactId = "tictactoe-app"
             from(components["java"])
             pom {
                 name.set("tictactoe")
-                description.set("An Over-Engineered Tic Tac Toe game")
+                description.set("An Over-Engineered Tic Tac Toe Game and Game Server")
                 url.set("https://github.com/briancorbinxyz/overengineering-tictactoe")
                 licenses {
                     license {
@@ -215,43 +102,7 @@ publishing {
         }
     }
 }
-
-tasks.withType<Test>().all {
-    systemProperty(
-        "java.library.path", libPath 
-    )
-
-    // JDK22: Foreign Function Interface (FFI)
-    // Resolves Warning:
-    // WARNING: A restricted method in java.lang.foreign.SymbolLookup has been called
-    // WARNING: java.lang.foreign.SymbolLookup::libraryLookup has been called by org.xxdc.oss.example.GameBoardNativeImpl in an unnamed module
-    // WARNING: Use --enable-native-access=ALL-UNNAMED to avoid a warning for callers in this module
-    // WARNING: Restricted methods will be blocked in a future release unless native access is enabled
-    jvmArgs = listOf("--enable-native-access=ALL-UNNAMED", "-XX:+UseZGC")
-    environment("PATH", libPath) // For Windows
-    environment("LD_LIBRARY_PATH", libPath) // For Linux
-    environment("DYLD_LIBRARY_PATH", libPath) // For macOS
-}
-
-tasks.named<JavaExec>("run") {
-    systemProperty(
-        "java.library.path", libPath 
-    )
-
-    // JDK22: Foreign Function Interface (FFI)
-    // Resolves Warning:
-    // WARNING: A restricted method in java.lang.foreign.SymbolLookup has been called
-    // WARNING: java.lang.foreign.SymbolLookup::libraryLookup has been called by org.xxdc.oss.example.GameBoardNativeImpl in an unnamed module
-    // WARNING: Use --enable-native-access=ALL-UNNAMED to avoid a warning for callers in this module
-    // WARNING: Restricted methods will be blocked in a future release unless native access is enabled
-    jvmArgs = listOf("--enable-native-access=ALL-UNNAMED", "-XX:+UseZGC")
-    environment("PATH", libPath) // For Windows
-    environment("LD_LIBRARY_PATH", libPath) // For Linux
-    environment("DYLD_LIBRARY_PATH", libPath) // For macOS
-}
-
-
-/// Install a pre-commit hook to run the Gradle task "spotlessApply" before committing changes.
+// Install a pre-commit hook to run the Gradle task "spotlessApply" before committing changes.
 tasks.register("installGitHook") {
     doLast {
         val hooksDir = file("${rootDir}/.git/hooks")
